--- a/cards.html
+++ b/cards.html
@@ -8,40 +8,56 @@
 </head>
 <body>
     <div class="cards">
-        <div class="card">
-            <img src="/public/assets/img/Luffy.jpg" alt="Luffy" class="imgCard">
-            test 1
+        <div class="card gold">
+            <img src="/public/assets/img/Luffy.jpg" alt="Luffy">
+            <h2>Monkey D.  Luffy</h2>
+            <p>
+                Luffy est un pirate au cœur vaillant, doté du pouvoir du Fruit du Caoutchouc, aspirant à devenir le Roi des Pirates en cherchant le trésor légendaire, 
+                le One Piece, tout en menant l'équipage du Chapeau de Paille avec détermination et esprit d'aventure.            </p>
         </div>
         <div class="card">
-            <img src="/public/assets/img/Zoro.jpg" alt="Zoro" class="imgCard">
-            test 2
+            <img src="/public/assets/img/Zoro.jpg" alt="Zoro">
+            <h2>Roronoa Zoro</h2>
+            <p>
+                Zoro est un redoutable épéiste, fidèle membre de l'équipage du Chapeau de Paille dirigé par Luffy, et il poursuit son rêve de devenir le meilleur escrimeur du monde tout en protégeant ses compagnons avec sa force et son honneur inébranlables.
+            </p>
         </div>
         <div class="card">
-            <img src="/public/assets/img/Kid.jpg" alt="Kid" class="imgCard">
-            test 3
+            <img src="/public/assets/img/Kid.jpg" alt="Kid">
+            <h2>Eustass "Captain" Kid</h2>
+            <p>Originaire de South blue, il est le capitaine des Kidd Pirates et a pour second le redoutable guerrier Killer. Il est le détenteur d'un fruit du démon : le fruit du magnétisme (Jiki Jiki) lui permettant de contrôler tout ce qui est métallique, ce qui le rend insensible aux sabres et aux balles (via la technique Repel). Il est même capable de se créer un gigantesques "bras" de débris métalliques pour frapper ses adversaires.</p>
         </div>
         <div class="card">
-            <img src="/public/assets/img/Killer.jpg" alt="Killer" class="imgCard">
-            test 4
+            <img src="/public/assets/img/Killer.jpg" alt="Killer">
+            <h2>Killer "Le Massacreur"</h2>
+            <p>Killer est un pirate de l'équipe d'Eustass Kidd. Il porte toujours un casque à rayure bleu et blanc, et combat uniquement avec de longues lames...</p>
         </div>
     
         <div class="card">
-            <img src="/public/assets/img/Shanks.jpg" alt="Shanks" class="imgCard">
-            test 5
+            <img src="/public/assets/img/Shanks.jpg" alt="Shanks">
+            <h2>Shanks "Le Roux"</h2>
+            <p>Shanks est l'idole de Luffy. Il a perdu un bras en sauvant Luffy d'un énorme monstre marin. Il supporte qu'on lui crache dessus ou qu'on lui manque d'honneur mais il déteste qu'on touche à ses amis. Il est un des quatre empereurs qui règne sur la deuxième partie de Grand Line : Le nouveau Monde.</p>
         </div>
         <div class="card">
-            <img src="/public/assets/img/Gol_D_Roger.jpg" alt="Gol_D_Roger" class="imgCard">
-
+            <img src="/public/assets/img/Gol_D_Roger.jpg" alt="Gol_D_Roger">
+            <h2>Gol D. Roger</h2>
+            <p>Gold Roger est le personnage clé de One Piece. Il était connu pour être le "Roi des Pirates", soit le plus puissant, celui qui avait atteint l'extrémité du monde. Malheureusement devenue trop dangereux, il fut exécuté dans sa ville natale de Logue Town. Cependant, avant de mourir, il déclara qu'il avait laissé un trésor, et qu'il le laissait à celui qui le trouverais. Il déclencha ainsi une grande vague de piraterie.</p>
+        </div>
+        <div class="card gold">
+            <img src="/public/assets/img/Ace.jpg" alt="Ace">
+            <h2>Portgast D. Ace</h2>
+            <p>Portgas D. Ace est le commandant de la seconde flotte d'Edward Newgate (alias Barbe Blanche) d'où le tatouage qu'il porte dans le dos (un svastika) qui représente l'emblème de Barbe Blanche. Il considère Barbe Blanche comme étant le plus grand pirate du monde, il fera d'ailleurs tout pour l'aider à devenir le Seigneur des Pirates.</p>
         </div>
         <div class="card">
-            <img src="/public/assets/img/Ace.jpg" alt="Ace" class="imgCard">
-
+            <img src="/public/assets/img/mihawk.jpg" alt="mihawk">
+            <h2>Dracule Mihawk</h2>
+            <p>Hawk eyes Mihawk est le meilleur combattant à l'épée du monde et un ami de Shanks le roux. Il fait également parti des sept shichibukai que l'on trouve sur Grand Line. Ses armes sont un petit poignard (petite croix) et une immense épée qu'il porte sur son dos (grande croix).</p>
         </div>
-        <div class="card">
-            <img src="/public/assets/img/mihawk.jpg" alt="mihawk" class="imgCard">
-
+        <div class="card gold">
+            <img src="/public/assets/img/usopp.jpg" alt="usopp">
+            <h2>Sogeking</h2>
+            <p>Sogeking est le roi des tireurs d'élite. Il rejoint Luffy et son équipage dans la bataille d'Enies Lobby, mais ces derniers ne sont pas dupes...</p>
         </div>
     </div>
-
 </body>
 </html>
